force-app/main/default/objects/Customer_Contract__c/Customer_Contract__c.object-meta.xml
<CustomObject>
    <label>Customer Contract</label>
    <nameField>
        <label>Customer Contract Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>