force-app/main/default/objects/Customer_Contract__c/fields/Allison_Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Allison_Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allison Hybrid option listed</description>
    <label>Allison Hybrid</label>
    <type>Checkbox</type>
</CustomField>