force-app/main/default/objects/Customer_Contract__c/fields/Approved_Equal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Equal_Due_Date__c</fullName>
    <label>Approved Equal Due Date</label>
    <type>DateTime</type>
</CustomField>