force-app/main/default/objects/Customer_Contract__c/fields/Approved_Equals__c.field-meta.xml
<CustomField>
    <fullName>Approved_Equals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the bid include approved equals</description>
    <label>Approved Equals</label>
    <type>Checkbox</type>
</CustomField>