force-app/main/default/objects/Customer_Contract__c/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <description>Contract Award Date</description>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>