force-app/main/default/objects/Customer_Contract__c/fields/Award_Status__c.field-meta.xml
<CustomField>
    <fullName>Award_Status__c</fullName>
    <label>Award Status</label>
    <type>TextArea</type>
</CustomField>