force-app/main/default/objects/Customer_Contract__c/fields/BAE_Hybrid__c.field-meta.xml
<CustomField>
    <fullName>BAE_Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BAE Hybrid option listed</description>
    <label>BAE Hybrid</label>
    <type>Checkbox</type>
</CustomField>