force-app/main/default/objects/Customer_Contract__c/fields/BAFO_Date__c.field-meta.xml
<CustomField>
    <fullName>BAFO_Date__c</fullName>
    <label>BAFO Date</label>
    <type>DateTime</type>
</CustomField>