force-app/main/default/objects/Customer_Contract__c/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <description>Bid Due Date</description>
    <label>Bid Date</label>
    <type>DateTime</type>
</CustomField>