force-app/main/default/objects/Customer_Contract__c/fields/Bid_Email_Submission__c.field-meta.xml
<CustomField>
    <fullName>Bid_Email_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Email Submission</label>
    <type>Checkbox</type>
</CustomField>