force-app/main/default/objects/Customer_Contract__c/fields/Bid_Stage__c.field-meta.xml
<CustomField>
    <fullName>Bid_Stage__c</fullName>
    <label>Bid Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specification Received</fullName>
            </value>
            <value>
                <fullName>Prepare Approved Equals</fullName>
            </value>
            <value>
                <fullName>Awaiting Approved Equals</fullName>
            </value>
            <value>
                <fullName>Prepare Bid</fullName>
            </value>
            <value>
                <fullName>Clarifications</fullName>
            </value>
            <value>
                <fullName>BAFO</fullName>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
            </value>
            <value>
                <fullName>Intent to Award GILLIG</fullName>
            </value>
            <value>
                <fullName>Award GILLIG</fullName>
            </value>
            <value>
                <fullName>Award Competitor</fullName>
            </value>
            <value>
                <fullName>No-Bid</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>