force-app/main/default/objects/Customer_Contract__c/fields/Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>Bid_Status__c</fullName>
    <label>Bid Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>No-Bid</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>