force-app/main/default/objects/Customer_Contract__c/fields/Bid_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submission_Type__c</fullName>
    <label>Bid Submission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Mail In</fullName>
            </value>
            <value>
                <fullName>Mail In &amp; USB</fullName>
            </value>
            <value>
                <fullName>Mail In &amp; Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>