force-app/main/default/objects/Customer_Contract__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Bid Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evaluated/Negotiated</fullName>
            </value>
            <value>
                <fullName>Low Bid</fullName>
            </value>
            <value>
                <fullName>State Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>