force-app/main/default/objects/Customer_Contract__c/fields/BRDate__c.field-meta.xml
<CustomField>
    <fullName>BRDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Recieved Date</label>
    <type>Date</type>
</CustomField>