force-app/main/default/objects/Customer_Contract__c/fields/Clarifications_Questions_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Clarifications_Questions_Due_Date__c</fullName>
    <label>Clarifications/Questions Due Date</label>
    <type>DateTime</type>
</CustomField>