force-app/main/default/objects/Customer_Contract__c/fields/CNG__c.field-meta.xml
<CustomField>
    <fullName>CNG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CNG option listed</description>
    <label>CNG</label>
    <type>Checkbox</type>
</CustomField>