force-app/main/default/objects/Customer_Contract__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Customer Contracts</relationshipLabel>
    <relationshipName>Customer_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>