force-app/main/default/objects/Customer_Contract__c/fields/Contract_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract Administrator assigned to the project</description>
    <label>Contract Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>