force-app/main/default/objects/Customer_Contract__c/fields/Deviations_with_Bid__c.field-meta.xml
<CustomField>
    <fullName>Deviations_with_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the bid allow deviations</description>
    <label>Deviations with Bid</label>
    <type>Checkbox</type>
</CustomField>