force-app/main/default/objects/Customer_Contract__c/fields/Diesel__c.field-meta.xml
<CustomField>
    <fullName>Diesel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diesel option listed</description>
    <label>Diesel</label>
    <type>Checkbox</type>
</CustomField>