force-app/main/default/objects/Customer_Contract__c/fields/Document_Retention_Information__c.field-meta.xml
<CustomField>
    <fullName>Document_Retention_Information__c</fullName>
    <label>Document Retention Information</label>
    <type>TextArea</type>
</CustomField>