force-app/main/default/objects/Customer_Contract__c/fields/Email_Submission__c.field-meta.xml
<CustomField>
    <fullName>Email_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Equals Email Submission</label>
    <type>Checkbox</type>
</CustomField>