force-app/main/default/objects/Customer_Contract__c/fields/End_of_Firm_Offer_Period__c.field-meta.xml
<CustomField>
    <fullName>End_of_Firm_Offer_Period__c</fullName>
    <formula>if(isblank( BAFO_Date__c ),

	if(isblank (Bid_Date__c ),
		null,

		Bid_Date__c+ Proposal_Validity_Period_Days__c ),

	BAFO_Date__c +Proposal_Validity_Period_Days__c)</formula>
    <label>End of Firm Offer Period</label>
    <type>Date</type>
</CustomField>