force-app/main/default/objects/Customer_Contract__c/fields/Fuel_Cell__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Cell</label>
    <type>Checkbox</type>
</CustomField>