force-app/main/default/objects/Customer_Contract__c/fields/Initial_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Initial_Configuration__c</fullName>
    <description>Configuration of Initial Order</description>
    <label>Initial Configuration</label>
    <type>TextArea</type>
</CustomField>