force-app/main/default/objects/Customer_Contract__c/fields/Initial_Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delivery_Details__c</fullName>
    <label>Initial Delivery (Details)</label>
    <type>TextArea</type>
</CustomField>