force-app/main/default/objects/Customer_Contract__c/fields/Initial_Delivery_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delivery_Picklist__c</fullName>
    <label>Initial Delivery (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Quotes</valueSetName>
    </valueSet>
</CustomField>