force-app/main/default/objects/Customer_Contract__c/fields/Initial_Delivery_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delivery_Requirement__c</fullName>
    <formula>if( ispickval(Initial_Delivery_Picklist__c,
&quot;X Months After Receipt of Order&quot;),
text(Initial_Delivery_Variable__c) +&quot; Months After Receipt of Order&quot;,

if(ispickval(Initial_Delivery_Picklist__c,
&quot;X Weeks After Receipt of Order&quot;),
text(Initial_Delivery_Variable__c)+&quot; Weeks After Receipt of Order&quot;,

if(ispickval(Initial_Delivery_Picklist__c,
&quot;X Days After Receipt of Order&quot;),
text(Initial_Delivery_Variable__c) +&quot; Days After Receipt of Order&quot;, 

text(Initial_Delivery_Picklist__c ))))</formula>
    <label>Initial Delivery Requirement</label>
    <type>Text</type>
</CustomField>