force-app/main/default/objects/Customer_Contract__c/fields/Initial_Delivery_Variable__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delivery_Variable__c</fullName>
    <label>Initial Delivery (Variable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>