force-app/main/default/objects/Customer_Contract__c/fields/Initial_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quantity__c</fullName>
    <description>Initial Order Quantity per the bid documents</description>
    <label>Initial Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>