force-app/main/default/objects/Customer_Contract__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <formula>Lead_Agency__r.Internal_Name__c</formula>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>