force-app/main/default/objects/Customer_Contract__c/fields/Inventive_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Inventive_Agreements__c</fullName>
    <label>Inventive Agreements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incentive_Agreements</valueSetName>
    </valueSet>
</CustomField>