force-app/main/default/objects/Customer_Contract__c/fields/Lead_Agency__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lead Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Contracts</relationshipLabel>
    <relationshipName>Customer_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>