force-app/main/default/objects/Customer_Contract__c/fields/No_Bid_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Bid_Reason__c</fullName>
    <label>No-Bid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Risk Profile</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Schedule - Insufficient Bid Resources</fullName>
            </value>
            <value>
                <fullName>Schedule - Customer Bid Timing Constraint</fullName>
            </value>
            <value>
                <fullName>Specification - Medium Duty</fullName>
            </value>
            <value>
                <fullName>Specification - Overly Onerous</fullName>
            </value>
            <value>
                <fullName>Specification - Product (i.e Artic, Coach)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Electric – Range Constraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>