force-app/main/default/objects/Customer_Contract__c/fields/Option_Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Option_Delivery_Details__c</fullName>
    <label>Option Delivery (Details)</label>
    <type>TextArea</type>
</CustomField>