force-app/main/default/objects/Customer_Contract__c/fields/Option_Delivery_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Option_Delivery_Picklist__c</fullName>
    <label>Option Delivery (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Quotes</valueSetName>
    </valueSet>
</CustomField>