force-app/main/default/objects/Customer_Contract__c/fields/Option_Delivery_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Option_Delivery_Requirement__c</fullName>
    <formula>if( ispickval( Option_Delivery_Picklist__c , 
&quot;X Months After Receipt of Order&quot;), 
text( Option_Delivery_Variable__c ) +&quot; Months After Receipt of Order&quot;, 

if(ispickval(Option_Delivery_Picklist__c, 
&quot;X Weeks After Receipt of Order&quot;), 
text(Option_Delivery_Variable__c)+&quot; Weeks After Receipt of Order&quot;, 

if(ispickval(Option_Delivery_Picklist__c, 
&quot;X Days After Receipt of Order&quot;), 
text(Option_Delivery_Variable__c) +&quot; Days After Receipt of Order&quot;, 

text(Option_Delivery_Picklist__c ))))</formula>
    <label>Option Delivery Requirement</label>
    <type>Text</type>
</CustomField>