force-app/main/default/objects/Customer_Contract__c/fields/Option_Delivery_Variable__c.field-meta.xml
<CustomField>
    <fullName>Option_Delivery_Variable__c</fullName>
    <label>Option Delivery (Variable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>