force-app/main/default/objects/Customer_Contract__c/fields/Option_Years__c.field-meta.xml
<CustomField>
    <fullName>Option_Years__c</fullName>
    <label>Option Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>