force-app/main/default/objects/Customer_Contract__c/fields/Optional_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Optional_Quantities__c</fullName>
    <description>Options included per the bid documents</description>
    <label>Optional Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>