force-app/main/default/objects/Customer_Contract__c/fields/Pre_Bid_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Pre_Bid_Meeting__c</fullName>
    <label>Pre-Bid Meeting</label>
    <type>DateTime</type>
</CustomField>