force-app/main/default/objects/Customer_Contract__c/fields/Project_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Sales Manager Assigned to the Bid</description>
    <label>Project Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>