force-app/main/default/objects/Customer_Contract__c/fields/Proposal_Validity_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Validity_Period_Days__c</fullName>
    <description>Length of time for which proposal remains firm &amp; valid</description>
    <label>Proposal Validity Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>