force-app/main/default/objects/Customer_Contract__c/fields/Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Term_Years__c</fullName>
    <label>Initial Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>