force-app/main/default/objects/Customer_Contract__c/fields/X29__c.field-meta.xml
<CustomField>
    <fullName>X29__c</fullName>
    <defaultValue>false</defaultValue>
    <description>29&apos; option listed</description>
    <label>29&apos;</label>
    <type>Checkbox</type>
</CustomField>