force-app/main/default/objects/Customer_Contract__c/fields/X35__c.field-meta.xml
<CustomField>
    <fullName>X35__c</fullName>
    <defaultValue>false</defaultValue>
    <description>35&apos; option listed</description>
    <label>35&apos;</label>
    <type>Checkbox</type>
</CustomField>