force-app/main/default/objects/Customer_Contract__c/fields/X40__c.field-meta.xml
<CustomField>
    <fullName>X40__c</fullName>
    <defaultValue>false</defaultValue>
    <description>40&apos; option listed</description>
    <label>40&apos;</label>
    <type>Checkbox</type>
</CustomField>