force-app/main/default/objects/Customer_Contract__c/recordTypes/Cancelled.recordType-meta.xml
<RecordType>
    <fullName>Cancelled</fullName>
    <active>true</active>
    <description>Cancelled</description>
    <label>Cancelled</label>
</RecordType>