force-app/main/default/objects/Customer_Contract__c/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <description>Competitor Contract</description>
    <label>Competitor</label>
</RecordType>