force-app/main/default/objects/Customer_Contract__c/recordTypes/Expired.recordType-meta.xml
<RecordType>
    <fullName>Expired</fullName>
    <active>true</active>
    <description>Expired Contracts</description>
    <label>Expired</label>
</RecordType>