force-app/main/default/objects/Customer_Contract__c/recordTypes/Forecasted_RFP.recordType-meta.xml
<RecordType>
    <fullName>Forecasted_RFP</fullName>
    <active>true</active>
    <description>RFP&apos;s that may come on to the market</description>
    <label>Forecasted RFP</label>
</RecordType>