force-app/main/default/objects/Customer_Contract__c/recordTypes/GILLIG.recordType-meta.xml
<RecordType>
    <fullName>GILLIG</fullName>
    <active>true</active>
    <description>GILLIG Contract</description>
    <label>GILLIG</label>
</RecordType>