force-app/main/default/objects/Customer_Contract__c/recordTypes/In_Process.recordType-meta.xml
<RecordType>
    <fullName>In_Process</fullName>
    <active>true</active>
    <description>In Process Contract</description>
    <label>In Process</label>
</RecordType>