force-app/main/default/objects/Customer_Contract__c/recordTypes/RFI_Submitted.recordType-meta.xml
<RecordType>
    <fullName>RFI_Submitted</fullName>
    <active>true</active>
    <description>When the RFI has been submitted and no longer requires work.</description>
    <label>RFI Submitted</label>
</RecordType>