force-app/main/default/objects/Customer_Contract__c/recordTypes/State_Contract.recordType-meta.xml
<RecordType>
    <fullName>State_Contract</fullName>
    <active>true</active>
    <description>Multiple Awards on a State Contract</description>
    <label>State Contract</label>
</RecordType>