force-app/main/default/objects/Customer_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lead_Agency__c</columns>
    <columns>NAME</columns>
    <columns>Bid_Date__c</columns>
    <columns>Award_Date__c</columns>
    <columns>Term_Years__c</columns>
    <columns>Initial_Delivery_Requirement__c</columns>
    <columns>Option_Delivery_Requirement__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>No_Bid_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>