force-app/main/default/objects/Customer_Contract__c/listViews/BYD_Contracts.listView-meta.xml
<ListView>
    <fullName>BYD_Contracts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor__c</field>
        <operation>equals</operation>
        <value>BYD</value>
    </filters>
    <label>BYD Contracts</label>
</ListView>