force-app/main/default/objects/Customer_Contract__c/listViews/CNG_GILLIG_Contracts.listView-meta.xml
<ListView>
    <fullName>CNG_GILLIG_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Award_Date__c</columns>
    <columns>Expiration__c</columns>
    <columns>Initial_Delivery_Requirement__c</columns>
    <columns>Option_Delivery_Requirement__c</columns>
    <columns>Bid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Contract__c.GILLIG</value>
    </filters>
    <filters>
        <field>CNG__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CNG GILLIG Contracts</label>
    <sharedTo>
        <role>Sales_Admin</role>
    </sharedTo>
</ListView>