force-app/main/default/objects/Customer_Contract__c/listViews/Electric_Bids.listView-meta.xml
<ListView>
    <fullName>Electric_Bids</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Bid_Date__c</columns>
    <columns>Bid_Stage__c</columns>
    <columns>Bid_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Electric__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Electric Bids</label>
    <sharedTo>
        <role>Product_Planning_Manager</role>
    </sharedTo>
</ListView>