force-app/main/default/objects/Customer_Contract__c/listViews/New_Flyer_Contracts.listView-meta.xml
<ListView>
    <fullName>New_Flyer_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Award_Date__c</columns>
    <columns>Bid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor__c</field>
        <operation>equals</operation>
        <value>New Flyer</value>
    </filters>
    <label>New Flyer Contracts</label>
</ListView>