force-app/main/default/objects/Customer_Contract__c/listViews/No_Bids.listView-meta.xml
<ListView>
    <fullName>No_Bids</fullName>
    <columns>NAME</columns>
    <columns>No_Bid_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>No_Bid_Reason__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>No Bids</label>
</ListView>