force-app/main/default/objects/Customer_Contract__c/listViews/Nova_Contracts.listView-meta.xml
<ListView>
    <fullName>Nova_Contracts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor__c</field>
        <operation>equals</operation>
        <value>Nova</value>
    </filters>
    <label>Nova Contracts</label>
</ListView>