force-app/main/default/objects/Customer_Contract__c/listViews/Open_Contracts.listView-meta.xml
<ListView>
    <fullName>Open_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Administrator__c</columns>
    <columns>Project_Sales_Manager__c</columns>
    <columns>Bid_Type__c</columns>
    <columns>Approved_Equal_Due_Date__c</columns>
    <columns>Bid_Date__c</columns>
    <columns>Initial_Quantity__c</columns>
    <columns>Initial_Configuration__c</columns>
    <columns>Optional_Quantities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Contract__c.In_Process</value>
    </filters>
    <label>In Process Bids</label>
</ListView>