force-app/main/default/objects/Customer_Contract__c/listViews/Proterra_Contracts.listView-meta.xml
<ListView>
    <fullName>Proterra_Contracts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor__c</field>
        <operation>equals</operation>
        <value>Proterra</value>
    </filters>
    <label>Proterra Contracts</label>
</ListView>