force-app/main/default/objects/Customer_Contract__c/listViews/Unexpired_GILLIG_Contracts.listView-meta.xml
<ListView>
    <fullName>Unexpired_GILLIG_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Award_Date__c</columns>
    <columns>Expiration__c</columns>
    <columns>Initial_Delivery_Requirement__c</columns>
    <columns>Option_Delivery_Requirement__c</columns>
    <columns>Contract_Administrator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Contract__c.GILLIG</value>
    </filters>
    <filters>
        <field>Expiration__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Unexpired GILLIG Contracts</label>
</ListView>