force-app/main/default/objects/Customer_Contract__c/listViews/X2019_Bids.listView-meta.xml
<ListView>
    <fullName>X2019_Bids</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Bid_Type__c</columns>
    <columns>Bid_Date__c</columns>
    <columns>Competitor__c</columns>
    <columns>Project_Sales_Manager__c</columns>
    <columns>Bid_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Award_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </filters>
    <filters>
        <field>Award_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2020</value>
    </filters>
    <label>2019 Bids</label>
</ListView>